# fb2reader

./: Cargo.toml  rustfmt.toml
src/: err.rs  lib.rs  parse.rs  types.rs  xml.rs
tests/: parsesml.rs
