[package]
name = "fb2reader"
version = "0.1.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["fb2"]
license = "Apache 2.0"
description = "FB2 Reader library"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/fb2reader"

[dependencies]
thiserror = "1.0"